--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -111,7 +111,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_06_10__usa_lxaiicml20192.jpg">
-  <p style="text-align:center">Peruvian group at the LXAI at ICML 2019. <br> Long Beach, USA. <br> 2019 June.</p>
+  <p style="text-align:center">Peruvian group at the LXAI workshop at ICML 2019. <br> Long Beach, USA. <br> 2019 June.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_06_10__usa_lxaiicml20191.jpg">
@@ -177,7 +177,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;12:00 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;12:01 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
