--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -126,6 +126,10 @@
   <p style="text-align:center">Nao Humanoid Robot. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2017_03_30__poland_mylab.jpg">
+  <p style="text-align:center">My working laboratory, AGH UST. <br> Krakow, Poland. <br> 2017 March.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03_30__poland_informatyk.jpg">
   <p style="text-align:center">Faculty of Computer Science and Electronics, AGH UST. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
@@ -177,7 +181,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;12:15 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;12:46 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
