--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -122,6 +122,10 @@
   <p style="text-align:center">The ICML 2019 conference. <br> Long Beach, USA. <br> 2019 June.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2017_03_30__poland_supervisor.jpg">
+  <p style="text-align:center">My supervisor in AGH UST and me. <br> Krakow, Poland. <br> 2017 March.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03_30__poland_naorobot.jpg">
   <p style="text-align:center">Nao Humanoid Robot. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
@@ -181,7 +185,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;12:51 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;12:52 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
