--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -123,7 +123,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03_30__poland_supervisor.jpg">
-  <p style="text-align:center">My advisor in AGH UST and me. <br> Krakow, Poland. <br> 2017 March.</p>
+  <p style="text-align:center">My AGH UST advisor and me. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2017_03_30__poland_naorobot.jpg">
@@ -185,7 +185,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;13:02 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;13:04 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
