--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -110,6 +110,10 @@
   <p style="text-align:center">The Golden Gate Bridge. <br> San Francisco, USA. <br> 2019 June.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_06_10__usa_lxaiicml20193.jpg">
+  <p style="text-align:center">Group photo at the LXAI workshop at ICML 2019. <br> Long Beach, USA. <br> 2019 June.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_06_10__usa_lxaiicml20192.jpg">
   <p style="text-align:center">Peruvian group at the LXAI workshop at ICML 2019. <br> Long Beach, USA. <br> 2019 June.</p>
 </div>
@@ -181,7 +185,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;15:26 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;15:35 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
