--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -99,7 +99,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12_08__canada_neurips2019.jpg">
-  <p style="text-align:center">Participating at the NeurIPS 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
+  <p style="text-align:center">Participating in NeurIPS (formerly NIPS) 2019. <br> Vancouver, Canada. <br> 2019 December.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12_01__peru_papaschota.jpg">
@@ -189,7 +189,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;16:09 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;16:15 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
