--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -107,7 +107,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_08_21__peru_simbig.jpg">
-  <p style="text-align:center">Paper presentation at SIMBig 2019. <br> Lima, Peru. <br> 2019 August.</p>
+  <p style="text-align:center">Oral paper presentation at SIMBig 2019. <br> Lima, Peru. <br> 2019 August.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_06_14__usa_goldengate.jpg">
@@ -189,7 +189,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;16:19 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;16:20 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
