--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -106,6 +106,10 @@
   <p style="text-align:center">Participating in NeurIPS 2019 (formerly NIPS). <br> Vancouver, Canada. <br> 2019 December.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2019_12_05__peru_bioinfoautism.png">
+  <p style="text-align:center">My parents and me. <br> Lima, Peru. <br> 2019 December.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12_01__peru_papaschota.jpg">
   <p style="text-align:center">My parents and me. <br> Chota, Peru. <br> 2019 December.</p>
 </div>
@@ -197,7 +201,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;16:57 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;16:59 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
