--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -107,7 +107,7 @@
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12_05__peru_bioinfoautism.png">
-  <p style="text-align:center">My parents and me. <br> Lima, Peru. <br> 2019 December.</p>
+  <p style="text-align:center">Working group of a 2019 LARA project, UPCH. <br> Lima, Peru. <br> 2019 December.</p>
 </div>
 <div class="oneThird">
   <img src="https://dennishnf.com/gallery/2019_12_01__peru_papaschota.jpg">
@@ -201,7 +201,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;16:59 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;17:01 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
