--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -158,6 +158,10 @@
   <p style="text-align:center">Closing ceremony of the UNESCO Fellowship. <br> Krakow, Poland. <br> 2017 March.</p>
 </div>
 <div class="oneThird">
+  <img src="https://dennishnf.com/gallery/2017_01_19__germany_trip.jpg">
+  <p style="text-align:center">Brandenburger Tor. <br> Berlin, Germany. <br> 2017 January.</p>
+</div>
+<div class="oneThird">
   <img src="https://dennishnf.com/gallery/2015_08_29__peru_graduation.jpg">
   <p style="text-align:center">Graduation ceremony. <br> Lima, Peru. <br> 2015 August.</p>
 </div>
@@ -201,7 +205,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;17:48 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-06&nbsp;&nbsp;17:52 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
