--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <h2>News and updates</h2>
 <p>
 <ul>
+<li>2021 May - <a href="https://www.eeml.eu/home" target="_blank">Accepted to participate in the Eastern European Machine Learning Summer School (EEML) 2021</a>.</li>
 <li>2021 May - <a href="https://www.latinxinai.org/icml-2021-about" target="_blank">Considered as workshop chair for the LatinX in AI (LXAI) Research Workshop at the ICML 2021</a>.</li>
 <li>2021 Apr - <a href="https://www.latinxinai.org/icml-2021-about" target="_blank">Selected as program committee member (paper reviewer) for the LXAI Workshop at the ICML 2021</a>.</li>
 <li>2021 Apr - Considered as member of the 2021 IEEE INTERCON program committee, as paper reviewer.</li>
@@ -225,7 +226,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-08&nbsp;&nbsp;01:45 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-08&nbsp;&nbsp;01:49 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
