--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <li>2021 May - <a href="https://www.latinxinai.org/icml-2021-about" target="_blank">Considered as workshop chair for the LatinX in AI (LXAI) Research Workshop at the ICML 2021</a>.</li>
 <li>2021 Apr - <a href="https://www.latinxinai.org/icml-2021-about" target="_blank">Selected as program committee member (paper reviewer) for the LXAI Workshop at the ICML 2021</a>.</li>
 <li>2021 Apr - Considered as member of the 2021 IEEE INTERCON program committee, as paper reviewer.</li>
-<li>2021 Apr - Selected as one of the winners of a registration assistance for the prestigious ICLR 2021 conference.</li>
+<li>2021 Apr - Selected as one of the winners of a registration assistance for the prestigious ICLR 2021.</li>
 <li>2021 Apr - <a href="https://probabilistic.ai/" target="_blank">Pleased to have been accepted to participate in the Nordic Probabilistic AI School (ProbAI) 2021</a>.</li>
 <li>2021 Apr - Glad to attend the DLI workshop "Applications of AI for Anomaly Detection" at NVIDIA GTC 2021.</li>
 <li>2021 Apr - Winner of a D&I registration grant for the EACL 2021, one of the best conferences in NLP.</li>
@@ -228,7 +228,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-11&nbsp;&nbsp;09:42 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-11&nbsp;&nbsp;09:43 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
