--- a/pre.html
+++ b/pre.html
@@ -44,7 +44,8 @@
 <div id="layout_content">
 <div id="site_title">
 <h1><b><a href="https://dennishnf.com/">Dennis Núñez-Fernández</a></b></h1>
-<h2>BSc in Electronic Engineering, Universidad Nacional de Ingeniería (UNI)</h2>
+<h2>MSc in Digital Sciences, University of Paris</h2>
+<h2>BSc in Electronic Engineering, Universidad Nacional de Ingeniería</h2>
 </div>
 <div class="navigation">
 <ul>
