--- a/pre.html
+++ b/pre.html
@@ -45,7 +45,7 @@
 <div id="site_title">
 <h1><b><a href="https://dennishnf.com/">Dennis Núñez-Fernández</a></b></h1>
 <h2>MSc in Digital Sciences, University of Paris (U-Paris)</h2>
-<h2>BSc in Electronic Engineering, National University of Engineering (UNI)</h2>
+<h2>BSc in Electronic Engr., National University of Engineering (UNI)</h2>
 </div>
 <div class="navigation">
 <ul>
