--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div id="site_title">
 <h1><b><a href="https://dennishnf.com/">Dennis Núñez-Fernández</a></b></h1>
 <h2>MSc student in Digital Sciences, University of Paris (U-Paris)</h2>
-<h2>BSc in Electronic Engr., Universidad Nacional de Ingeniería (UNI)</h2>
+<h2>BSc in Electronic Engineering, Universidad Nacional de Ingeniería (UNI)</h2>
 </div>
 <div class="navigation">
 <ul>
@@ -229,7 +229,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-26&nbsp;&nbsp;22:51 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-26&nbsp;&nbsp;22:52 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
