--- a/pre.html
+++ b/pre.html
@@ -44,7 +44,7 @@
 <div id="layout_content">
 <div id="site_title">
 <h1><b><a href="https://dennishnf.com/">Dennis Núñez-Fernández</a></b></h1>
-<h2>MSc in Data Science and Artificial Intelligence, Université Côte d'Azur</h2>
+<h2>MSc in Digital Sciences, University of Paris</h2>
 </div>
 <div class="navigation">
 <ul>
