--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 <h2>News and updates</h2>
 <p>
 <ul>
+<li>2021 May - Glad to be accepted in different French universities for master studies.</li>
 <li>2021 May - <a href="http://cvpr2021.thecvf.com/" target="_blank">Grateful for winning a 'LatinX in CV' registration grant to attend the prestigious CVPR 2021</a>.</li>
 <li>2021 May - <a href="https://www.eeml.eu/home" target="_blank">Accepted to participate in the Eastern European Machine Learning Summer School (EEML) 2021</a>.</li>
 <li>2021 May - <a href="https://www.latinxinai.org/icml-2021-about" target="_blank">Considered as workshop chair for the LatinX in AI (LXAI) Research Workshop at the ICML 2021</a>.</li>
@@ -228,7 +229,7 @@ I have participated in prestigious conferences related to AI, such as the NeurIP
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-05-28&nbsp;&nbsp;17:35 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-05-28&nbsp;&nbsp;17:37 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
