--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 <h2>News and updates</h2>
 <p>
 <ul>
+<li>2021 Jun - <a href="https://dlrl.ca/" target="_blank">Accepted to participate in the CIFAR Deep Learning + Reinforcement Learning (DLRL) Summer School</a>.</li>
 <li>2021 Jun - Accepted for participate in the Neuromatch Academy (NMA) - Computational Neuroscience.</li>
 <li>2021 Jun - Pleased to be a volunteer member at the LatinX in CV (LXCV) Research workshop at CVPR 2021.</li>
 <li>2021 May - <a href="https://sites.google.com/view/beyond-fairness-cv/home" target="_blank">Cheerful that our paper has been accepted to the Beyond Fairness in CV workshop at CVPR 2021</a>.</li>
@@ -232,7 +233,7 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-06-24&nbsp;&nbsp;20:04 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-06-24&nbsp;&nbsp;20:06 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
