--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 <h2>News and updates</h2>
 <p>
 <ul>
-<li>2021 Jun - <a href="https://dlrl.ca/" target="_blank">Accepted to participate in the CIFAR Deep Learning + Reinforcement Learning (DLRL) Summer School</a>.</li>
-<li>2021 Jun - Accepted for attend in the Neuromatch Academy (NMA) - Computational Neuroscience.</li>
+<li>2021 Jun - <a href="https://dlrl.ca/" target="_blank">Accepted in the CIFAR Deep Learning + Reinforcement Learning (DLRL) Summer School</a>.</li>
+<li>2021 Jun - Accepted to participate in the Neuromatch Academy (NMA) - Computational Neuroscience.</li>
 <li>2021 Jun - Pleased to be a volunteer member at the LatinX in CV (LXCV) Research workshop at CVPR 2021.</li>
 <li>2021 May - <a href="https://sites.google.com/view/beyond-fairness-cv/home" target="_blank">Cheerful that our paper has been accepted to the Beyond Fairness in CV workshop at CVPR 2021</a>.</li>
 <li>2021 May - Glad to have been accepted in various French universities for master studies about ML/AI.</li>
@@ -233,7 +233,7 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-06-24&nbsp;&nbsp;20:12 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-06-24&nbsp;&nbsp;20:13 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
