--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 <h2>News and updates</h2>
 <p>
 <ul>
+<li>2021 Jun - Pleased to be invited to give a talk about Deep Learning for Data Science Woman Peru.</li>
 <li>2021 Jun - <a href="https://dlrl.ca/" target="_blank">Accepted in the CIFAR Deep Learning + Reinforcement Learning (DLRL) Summer School 2021</a>.</li>
 <li>2021 Jun - Accepted to participate in the Neuromatch Academy (NMA) - Computational Neuroscience.</li>
 <li>2021 Jun - Pleased to be a volunteer member at the LatinX in CV (LXCV) Research workshop at CVPR 2021.</li>
@@ -233,7 +234,7 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-06-26&nbsp;&nbsp;09:57 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-06-26&nbsp;&nbsp;10:01 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
