--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -69,6 +69,14 @@
 <p> 
 &nbsp &nbsp [<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
 </p>
+<h3>Curriculum Vitae in French:</h3>
+<p> 
+&nbsp &nbsp [<a href="CV-DennisNunezFernandez-french.pdf">CV-DennisNunezFernandez-english.pdf</a>]
+</p>
+<h3>Curriculum Vitae in Spanish:</h3>
+<p> 
+&nbsp &nbsp [<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-english.pdf</a>]
+</p>
 <br/>
 
 <br/>
@@ -94,7 +102,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-06-26&nbsp;&nbsp;10:25 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-06-26&nbsp;&nbsp;10:26 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
