--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 <p>
 <ul>
 <li>2021 Jul - <a href="http://ai.ntu.edu.tw/mlss2021/" target="_blank">Accepted as strong profile participant in the Machine Learning Summer School (MLSS) 2021 Taipei</a>.</li>
-<li>2021 Jun - <a href="https://dlrl.ca/" target="_blank">Accepted in the CIFAR Deep Learning + Reinforcement Learning (DLRL) Summer School 2021</a>.</li>
+<li>2021 Jun - <a href="https://dlrl.ca/" target="_blank">Thrilled to have been accepted in the CIFAR Deep Learning + Reinforcement Learning (DLRL) Summer School 2021</a>.</li>
 <li>2021 Jun - It's a pleasure to be invited to give a talk about deep learning for 'Data Science Woman Peru'.</li>
 <li>2021 Jun - <a href="https://academy.neuromatch.io/" target="_blank">Accepted to participate in the Neuromatch Academy (NMA) - Computational Neuroscience</a>.</li>
 <li>2021 Jun - Pleased to be a volunteer member at the LatinX in CV (LXCV) Research workshop at CVPR 2021.</li>
@@ -235,7 +235,7 @@ I have participated in prestigious conferences related to Artificial Intelligenc
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-07-02&nbsp;&nbsp;19:25 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-07-02&nbsp;&nbsp;19:26 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
