--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -75,6 +75,11 @@
 &nbsp &nbsp [<a href="CV-DennisNunezFernandez-french.pdf">CV-DennisNunezFernandez-french.pdf</a>]
 </p>
 <br/>
+<h3>Curriculum Vitae in German:</h3>
+<p> 
+&nbsp &nbsp [<a href="CV-DennisNunezFernandez-german.pdf">CV-DennisNunezFernandez-german.pdf</a>]
+</p>
+<br/>
 <h3>Curriculum Vitae in Spanish:</h3>
 <p> 
 &nbsp &nbsp [<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
@@ -104,7 +109,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">From scratch in Python. Powered by Linux</a> <br/>
-Website updated:&nbsp;&nbsp;2021-07-09&nbsp;&nbsp;21:49 GMT <br/> 
+Website updated:&nbsp;&nbsp;2021-07-09&nbsp;&nbsp;21:50 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
